gl31-master/src/test/deca/syntax/invalid/sansobjet/bad_return.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 12 : Erreur, 'return' sans paramètre
//
// Historique:
//    cree le 12/01/2021
{
    int a = readInt();

    return;
}

